# crack-db-drill

./: README.md  crack.py  pyproject.toml
sample/: id.txt  pw.txt
