[tool.poetry]
name = "crack-db-drill"
version = "0.1.0"
description = "crack db"
authors = ["cybertramp <paran_son@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
threadpool = "^1.3.2"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
